fix: text wrapping and sticky (#135)
* fix: text wrapping and sticky

* fix: get rid of Sticky alltogether when mobile, it was causing jumpy scrolling

---------

--- a/src/style.less
+++ b/src/style.less
@@ -5920,6 +5920,10 @@ table th {
             display: inline-block;
             vertical-align: top;
         }
+        .dynamic-html{
+            width: 100%;
+            overflow: hidden;
+        }
     }
     .post-sidebar{
         max-width: 422px;
@@ -5931,6 +5935,7 @@ table th {
         @media(max-width: 767px){
             max-width: 100%;
             padding-right: 0;
+            position: relative !important;
         }
     }
     .post-content{
